# tda-600

./: .gitignore  .yamllint  README.md  backend.docker  docker-compose.yml  frontend.docker  plough_and_populate_db.sh  pre-commit.hook.py  remigrate  setup.cfg  ubuntu_init
backend/: .dockerignore  docker-entrypoint.sh  manage.py  requirements.txt  requirements_dev.txt
backend/backend/: urls.py
backend/backend/settings/: base.py  development.py  production.py  testing.py
backend/core/: constants.py  factories.py  models.py  serializers.py  views.py
backend/core/management/commands/: populate.py
backend/core/migrations/: 0001_initial.py
backend/tests/: test_functional.py  test_tests.py  test_unit.py
frontend/: .dockerignore  .eslintignore  .eslintrc  nginx.conf  package.json
frontend/src/: App.css  App.js  registerServiceWorker.js
frontend/src/components/: CreateItem.js  List.js  Row.js
frontend/src/services/: api.js
frontend/src/static/: App.css
