[metadata]
description-file=README.md

[tool:pytest]
addopts = --isort -rs --flake8 --durations=10 --reuse-db --tb=short backend
DJANGO_SETTINGS_MODULE = backend.settings.testing

[isort]
# about: https://github.com/timothycrosley/isort/wiki/isort-Settings
include_trailing_comma = true
force_sort_within_sections = true
line_length=120
multi_line_output=3
indent='    '
skip = migrations,.git,settings

[flake8]
max_line_length = 120
exclude =
    migrations
    00??_*.py
# from http://flake8.pycqa.org/en/latest/user/error-codes.html
# F403 ‘from module import *’ used; unable to detect undefined names
# F405 name may be undefined, or defined from star imports: module
# E226 missing whitespace around arithmetic operator
# E731 do not assign a lambda expression, use a def
ignore = F403 F405 E226 E731 W503
